# timeframe

./: .gitignore  README.md  __init__.py  pyproject.toml  test.py  timeframe.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: python-package.yml  python-publish.yml
src/timeframe/: __init__.py  timeframe.py
timeframe/: __init__.py  timeframe.py
